handle leaks in bonus.. still need to test

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,5 +1,5 @@
 CC = cc
-CFLAGS = -Wall -Wextra -Werror #-fsanitize=thread -g   #-fsanitize=address -g 
+CFLAGS = -Wall -Wextra -Werror 
 PTFLAG = -pthread
 
 NAME = philo
